--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="act_login_btn_login">Iniciar Sesión</string>
     <string name="act_login_txt_sign_in">Crear una nueva cuenta de Sporlif</string>
     <string name="act_login_txt_recover_pass">¿Has olvidado tu contraseña?</string>
+    <string name="act_recover_btn_send">Enviar</string>
 
     <string-array name="genre">
         <item>Hombre</item>
